<resources>
    <string name="app_name">GeoJournal</string>
    <string name="action_settings">Settings</string>
    <string name="api_key" translatable="false">AIzaSyBeQ4XSJtnuTvSujRzvkjfuq5zrMHK1K6A</string>

    <string name="preview_image">Image preview</string>
    <string name="upload_media">Add photo</string>
    <string name="tap_to_add_photo">Tap to add a photo</string>
    <string name="you_can_use_camera_or_gallery">Camera or gallery</string>
    <string name="clear_image">Remove photo</string>

    <string name="new_memory">New memory</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location_label">Location</string>
    <string name="location_unknown">Location not available</string>
    <string name="location_pending">Requesting location…</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="see_history">See histories</string>
    <string name="log_out">Log out</string>
    <string name="cd_open_menu">Open menu</string>
    <string name="save_history">Save</string>
    <string name="nextDialog">Next</string>
    <string name="TextYes">Yes</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Continue</string>
    <string name="SignUpTxt">Sign Up</string>
    <string name="nameTxt">Name</string>
    <string name="fnameTxt">Lastname</string>
    <string name="emailTxt">E-mail</string>
    <string name="phonetxt">Phone number</string>
    <string name="bdayTxt">Select Birthdate</string>
    <string name="ErrorMsgAdd">Error adding data</string>
    <string name="ErrorMsgUpdate">Error updating data</string>
    <string name="MsgDataNotFound">Data not found</string>
    <string name="ErrorMsgRemove">Error deleting data</string>
    <string name="ErrorMsgGetById">Data not found</string>
    <string name="ErrorMsgGetAll">Error getting all data</string>
    <string name="TextSaveActionQuestion">Do you want to save data?</string>
    <string name="TextDeleteActionQuestion">Do you want to delete data?</string>
    <string name="MsgDuplicateDate">Duplicate Date</string>
    <string name="MsgSaveSuccess">The info has been saved</string>
    <string name="MsgDeleteSuccess">The data has been deleted</string>
    <string name="IdTxt_hint">Enter ID</string>
    <string name="nameTxt_hint">Enter your name</string>
    <string name="lnameTxt_hint">Enter your lastname</string>
    <string name="passTxt_hint">Enter your password</string>
    <string name="permits">Location permits need to be allowed</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot your password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>